sample/misc/error/eval_wdt_int.bfr
codegen [
  $alloc {x}
  + x x
]